# helix-financial-agent

./: .env.example  .gitignore  README.md  app.py  main.py  mlflow.db  pyproject.toml
.streamlit/: config.toml
config/: router_config.yaml
scripts/: run_mlflow_ui.sh  run_streamlit.sh  setup.sh  ssh_port_forward.sh  start_llama_server.sh  start_mcp_server.sh  start_router.sh  stop_router.sh  test_dependencies.sh
src/helix_financial_agent/: __init__.py  config.py  main.py  tracing.py  verbose_logging.py
src/helix_financial_agent/agent/: __init__.py  graph.py  nodes.py  prompts.py  runner.py  state.py
src/helix_financial_agent/app/: __init__.py  streamlit_app.py
src/helix_financial_agent/data_generation/: __init__.py  generate.py
src/helix_financial_agent/evaluation/: __init__.py  judge.py  run_benchmark.py
src/helix_financial_agent/router/: __init__.py  client.py  config.py
src/helix_financial_agent/tool_rag/: __init__.py  tool_selector.py  tool_store.py
src/helix_financial_agent/tools/: __init__.py  core_tools.py  distraction_tools.py  mcp_client.py  mcp_server.py
