[project]
name = "helix-financial-agent"
version = "0.1.0"
description = "A Reflexive Financial AI Agent with semantic routing, ToolRAG, and MCP server deployment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "APACHE 2.0"}
authors = [
    {name = "Vincent Caldeira", email = "vincent.caldeira@redhat.com"}
]
keywords = ["financial", "agent", "llm", "mcp", "semantic-routing", "langgraph"]

dependencies = [
    # Core LLM & Agent
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    
    # Financial Data
    "yfinance>=0.2.40",
    
    # MCP Server
    "fastmcp>=2.0.0",
    
    # Semantic Router (required - beta version)
    # Using >=0.1.0b0 to explicitly allow pre-release versions
    "vllm-sr>=0.1.0b0",
    
    # RAG / Embeddings
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "numpy>=1.26.0",
    
    # Tracing & Logging
    "mlflow>=2.15.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
helix-agent = "helix_financial_agent.main:main"
helix-mcp = "helix_financial_agent.tools.mcp_server:main"
helix-eval = "helix_financial_agent.evaluation.run_benchmark:main"
helix-generate = "helix_financial_agent.data_generation.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helix_financial_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
